Added new standalone uberjar.

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,5 @@
 events {}
 http {
-    
     upstream http_backend {
     
         server 127.0.0.1:3000;  # listen on 3000
@@ -8,9 +7,14 @@ http {
     }
 
     server {
-        location /static/ {  # static content
-            alias   /var/www/xxxx/public/;
-        }
+
+        listen       80;
+        server_name  localhost;
+
+        #location /static/ {  # static content
+        #    alias  /var/www/html;
+        #    index index.html;
+        #}
         location / {
             proxy_pass  http://http_backend;
 
